adds API Interface adds dropwizard test app adds module patches adds gradle configuration